syntax = "proto3";
option go_package = "./files";
package files;

message PingRequest {
    int64 challenge = 1;
}

message PingResponse {
    int64 challenge = 1;
}

message GetFileRequest {
    string name = 1;
}

message File {
    bytes data = 1;
}

message CreateFileRequest {
    string name =  1;
    bytes data = 2;
}

message CreateFileResponse {
    int64 bytesWritten = 1;
}

service FileService {
    rpc Ping(PingRequest) returns (PingResponse);
    rpc GetFile(GetFileRequest) returns (File);
    rpc CreateFile(CreateFileRequest) returns(CreateFileResponse);
}